--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 # data directories (should be recreated locally)
 /data
 /cnn/data
+# VS code files
+*/.vscode/*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
